--- a/devops/docker.html
+++ b/devops/docker.html
@@ -356,6 +356,7 @@ Available Commands:
     diff        Display the changes to the object's file system
     events      Show podman system events
     exec        Run a process in a running container
+. . . [ snip ] . . .
                             </span>
                         </div>
                     </section>
