--- a/devops.html
+++ b/devops.html
@@ -48,6 +48,14 @@
         <div class="article-section">
             <img src="media/imagen38.svg" alt="SQL" class="article-image">
             <h2><a href="devops/sql.html">SQL</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="MongoDB" class="article-image">
+            <h2><a href="devops/mongo.html">MongoDB</a></h2>
+        </div>  
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Redis" class="article-image">
+            <h2><a href="devops/redis.html">Redis</a></h2>
         </div> 
         <div class="article-section">
             <img src="media/imagen38.svg" alt="Docker" class="article-image">
