--- a/devops/mongo.html
+++ b/devops/mongo.html
@@ -89,8 +89,8 @@
                 <p><marcador class="resaltado8">Escalabilidad horizontal: </marcador>MongoDB se diseñó con la escalabilidad en mente. Utiliza particionamiento de datos (sharding) para distribuir documentos en múltiples servidores, lo que permite manejar cantidades masivas de información.</p>
                 <p><marcador class="resaltado8">Consultas avanzadas: </marcador>MongoDB soporta consultas complejas y operaciones de agregación que permiten analizar datos y obtener resultados sofisticados sin necesidad de transformar los datos previamente.</p>
                 <p><marcador class="resaltado8">Alta disponibilidad: </marcador>Con la configuración de réplicas, MongoDB asegura que los datos estén disponibles incluso en caso de fallos del sistema.</p>
-                <h2>Operaciones comunes</h2>
-                <h6>Operaciones CRUD (Create, Read, Update, Delete)</h6>
+                <h2>Consultas</h2>
+                <h6>Consultas CRUD (Create, Read, Update, Delete)</h6>
                 <p>Estas operaciones están relacionadas con la manipulación de los datos dentro de las colecciones. Los comandos CRUD permiten crear, leer, actualizar y eliminar documentos.</p>
                 <ul class="custom-list">
                     <li><marcador class="resaltado9">INSERT</marcador></li>
@@ -143,7 +143,7 @@
                 <div class="blog-image-grande">
                     <img src="media/mongodb4.png" alt="">
                 </div>               
-                <h6>Operaciones de agregación</h6>
+                <h6>Consultas de agregación</h6>
                 <p>MongoDB también ofrece una poderosa función de agregación que permite realizar operaciones complejas en los datos, como filtrado, clasificación y agrupación.</p>
                 <ul class="custom-list">
                     <li><marcador class="resaltado9">AGGREGATE</marcador></li>
@@ -158,7 +158,7 @@
                     </div>
                     <p>Esta operación utiliza el comando aggregate para filtrar primero los empleados del departamento 'Finanzas' y luego calcular el salario promedio de ese departamento. La operación de agregación es útil para obtener resúmenes y métricas de los datos almacenados.</p>
                 </ul>               
-                <h6>Operaciones de definición de colecciones</h6>
+                <h6>Consultas de definición de colecciones</h6>
                 <p>MongoDB permite definir colecciones dentro de la base de datos, lo que permite estructurar los datos y las operaciones sobre ellos.</p>
                 <ul class="custom-list">
                     <li><marcador class="resaltado9">CREATE</marcador></li>  
@@ -185,7 +185,7 @@
                     </div>
                     <p>Este comando elimina la colección empleados de la base de datos. Todos los documentos almacenados en esa colección se perderán, y la colección dejará de existir.</p>
                 </ul>               
-                <h6>Operaciones de control de acceso</h6>
+                <h6>Consultas de control de acceso</h6>
                 <p>MongoDB permite definir roles y permisos para controlar el acceso a las bases de datos y las colecciones.</p>
                 <ul class="custom-list">
                     <li><marcador class="resaltado9">GRANT</marcador></li>
