--- a/devops/redis.html
+++ b/devops/redis.html
@@ -217,6 +217,9 @@
                     <li><marcador class="resaltado8">DEL: </marcador>Elimina una o más claves.</li>
                     <li><marcador class="resaltado8">EXPIRE: </marcador>Establece un tiempo de expiración para una clave.</li>
                 </ul>
+                <div class="blog-image">
+                    <img src="media/redis8.jpg" alt="">
+                </div>
                 <p>Estos comandos son útiles para manipular directamente los datos en Redis y administrar claves con caducidad.</p>
                 <h6>Operadores en Listas</h6>
                 <p>Redis también permite trabajar con listas, donde se pueden agregar, obtener o eliminar elementos de las listas. Los comandos más comunes para listas incluyen:</p>
@@ -227,6 +230,9 @@
                     <li><marcador class="resaltado8">RPOP: </marcador>Elimina y devuelve el último elemento de una lista.</li>
                     <li><marcador class="resaltado8">LRANGE: </marcador>Recupera un rango de elementos de una lista.</li>
                 </ul>
+                <div class="blog-image-grande">
+                    <img src="media/redis10.jpg" alt="">
+                </div>
                 <h6>Operadores en Conjuntos</h6>
                 <p>Los conjuntos en Redis son colecciones de elementos únicos. Los comandos para trabajar con conjuntos incluyen:</p>
                 <ul class="custom-list2">
@@ -235,6 +241,9 @@
                     <li><marcador class="resaltado8">SMEMBERS: </marcador>Devuelve todos los miembros de un conjunto.</li>
                     <li><marcador class="resaltado8">SISMEMBER: </marcador>Verifica si un miembro está presente en un conjunto.</li>
                 </ul>
+                <div class="blog-image-grande">
+                    <img src="media/redis12.jpg" alt="">
+                </div>
                 <h6>Operadores en Hashes</h6>
                 <p>Los hashes en Redis son estructuras que almacenan pares de campo-valor. Algunos de los comandos más utilizados para manipular hashes incluyen:</p>
                 <ul class="custom-list2">
@@ -243,6 +252,9 @@
                     <li><marcador class="resaltado8">HDEL: </marcador>Elimina uno o más campos de un hash.</li>
                     <li><marcador class="resaltado8">HGETALL: </marcador>Devuelve todos los campos y valores de un hash.</li>
                 </ul>
+                <div class="blog-image-grande">
+                    <img src="media/redis9.jpg" alt="">
+                </div>
                 <h6>Operadores en Sorted Sets</h6>
                 <p>Los conjuntos ordenados en Redis permiten mantener un conjunto de elementos que son ordenados según una puntuación. Algunos de los comandos más comunes son:</p>
                 <ul class="custom-list2">
@@ -251,6 +263,9 @@
                     <li><marcador class="resaltado8">ZREM: </marcador>Elimina uno o más miembros de un conjunto ordenado.</li>
                     <li><marcador class="resaltado8">ZINCRBY: </marcador>Incrementa la puntuación de un miembro en un conjunto ordenado.</li>
                 </ul>
+                <div class="blog-image-grande">
+                    <img src="media/redis12.jpg" alt="">
+                </div>
                 <h2>Consultas Avanzadas en Redis</h2>
                 <ul class="custom-list">
                     <li><marcador class="resaltado9">SCAN</marcador></li>
