--- a/devops/mongo.html
+++ b/devops/mongo.html
@@ -89,6 +89,9 @@
                 <p><marcador class="resaltado8">Escalabilidad horizontal: </marcador>MongoDB se diseñó con la escalabilidad en mente. Utiliza particionamiento de datos (sharding) para distribuir documentos en múltiples servidores, lo que permite manejar cantidades masivas de información.</p>
                 <p><marcador class="resaltado8">Consultas avanzadas: </marcador>MongoDB soporta consultas complejas y operaciones de agregación que permiten analizar datos y obtener resultados sofisticados sin necesidad de transformar los datos previamente.</p>
                 <p><marcador class="resaltado8">Alta disponibilidad: </marcador>Con la configuración de réplicas, MongoDB asegura que los datos estén disponibles incluso en caso de fallos del sistema.</p>
+                <div class="blog-image-grande">
+                    <img src="media/mongodb4.png" alt="">
+                </div> 
                 <h2>Consultas</h2>
                 <h6>Consultas CRUD (Create, Read, Update, Delete)</h6>
                 <p>Estas operaciones están relacionadas con la manipulación de los datos dentro de las colecciones. Los comandos CRUD permiten crear, leer, actualizar y eliminar documentos.</p>
@@ -139,10 +142,7 @@
                         </div>
                     </div>
                     <p>Este comando elimina el documento del empleado con nombre 'Carlos' de la colección empleados. La operación borra por completo el documento que cumple con el criterio de búsqueda.</p>
-                </ul> 
-                <div class="blog-image-grande">
-                    <img src="media/mongodb4.png" alt="">
-                </div>               
+                </ul>               
                 <h6>Consultas de agregación</h6>
                 <p>MongoDB también ofrece una poderosa función de agregación que permite realizar operaciones complejas en los datos, como filtrado, clasificación y agrupación.</p>
                 <ul class="custom-list">
@@ -334,7 +334,7 @@
                     <img src="media/mongodb5.png" alt="">
                 </div>
                 <ul class="custom-list">
-                    <li><marcador class="resaltado9">JOIN en MongoDB</marcador></li>
+                    <li><marcador class="resaltado9">Relaciones en MongoDB</marcador></li>
                     <p>MongoDB es una base de datos NoSQL que no utiliza tablas ni relaciones entre ellas, por lo que no tiene un concepto directo de "JOIN" como en SQL. Sin embargo, MongoDB ofrece una operación similar llamada <code>$lookup</code>, que permite hacer uniones entre colecciones.</p>                
                     <div class="consola">
                         <div class="barra-superior-consola">
