--- a/devops/redis.html
+++ b/devops/redis.html
@@ -464,7 +464,7 @@
                         En sistemas basados en Debian/Ubuntu, puedes usar el siguiente comando para instalar Redis:
                     </div>
                     <div class="comandos">
-                        <input type="text" class="text" value="sudo apt update && sudo apt install redis-server" oninput="ajustarAncho(this)">
+                        <input type="text" class="text" value="sudo apt update && sudo apt install redis-server redis-tools" oninput="ajustarAncho(this)">
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
